--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
                     <li
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-105"
                     >
-                      <a href="https://x.com/MyTraderRoom"
+                      <a href="https://x.com/i/communities/1925491619735732525"
                         ><span class="ui-menu-item-wrapper">X</span></a
                       >
                     </li>
@@ -1866,7 +1866,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                 <ul class="elementor-icon-list-items">
                                   <li class="elementor-icon-list-item">
                                     <a
-                                      href="https://x.com/MyTraderRoom"
+                                      href="https://x.com/i/communities/1925491619735732525"
                                       target="_blank"
                                     >
                                       <span class="elementor-icon-list-text"
@@ -2014,7 +2014,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
               <li
                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-105"
               >
-                <a href="https://x.com/MyTraderRoom"
+                <a href="https://x.com/i/communities/1925491619735732525"
                   ><span class="ui-menu-item-wrapper">X</span></a
                 >
               </li>
