--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                     <li
                       class="menu-item menu-item-type-custom menu-item-object-custom menu-item-104"
                     >
-                      <a href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                      <a href="https://dexscreener.com/solana/BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                         ><span class="ui-menu-item-wrapper">Buy Now</span></a
                       >
                     </li>
@@ -991,7 +991,7 @@
               >
                 <div class="uicore-cta-wrapper">
                   <a
-                    href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                    href="https://dexscreener.com/solana/BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                     target="_blank"
                     class="uicore-btn"
                   >
@@ -1002,7 +1002,7 @@
               <div class="uicore-mobile-head-right">
                 <div class="uicore-cta-wrapper">
                   <a
-                    href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                    href="https://dexscreener.com/solana/BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                     target="_blank"
                     class="uicore-btn"
                   >
@@ -1157,7 +1157,7 @@
                               <div class="elementor-button-wrapper">
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
-                                  href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                                  href="https://dexscreener.com/solana/BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                                   style="width:115px; height:69px;"
                                 >
                                   <span
@@ -1801,7 +1801,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                                 <ul class="elementor-icon-list-items">
                                   <li class="elementor-icon-list-item">
                                     <a
-                                      href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                                      href="https://dexscreener.com/solana/BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                                       target="_blank"
                                     >
                                       <span class="elementor-icon-list-text"
@@ -1812,7 +1812,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
 
                                   <li class="elementor-icon-list-item">
                                     <a
-                                      href="https://dextools.io/app/en/solana/pair-explorer/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                                      href="https://www.dextools.io/app/en/solana/pair-explorer/8GqnzBq4vhBzZWfgNFeCUr6yDgFdziTEZ2dBx84spJqP?t=1747971771378"
                                     >
                                       <span class="elementor-icon-list-text"
                                         >Dextools</span
@@ -1822,7 +1822,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
 
                                   <li class="elementor-icon-list-item">
                                     <a
-                                      href="https://jup.ag/"
+                                      href="https://jup.ag/swap/SOL-BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                                     >
                                       <span class="elementor-icon-list-text"
                                         >Jupiter</span
@@ -2027,7 +2027,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
           >
             <div class="uicore-cta-wrapper">
               <a
-                href="https://dexscreener.com/solana/SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                href="https://dexscreener.com/solana/BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                 target="_blank"
                 class="uicore-btn"
               >
