--- a/index.html
+++ b/index.html
@@ -1999,7 +1999,7 @@ No noise. No hype. Just pure trading skill — tracked, ranked, and on-chain.</p
                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-103"
               >
                 <a
-                  href="https://raydium.io/swap/?inputMint=sol&outputMint=SrMozXMYR6gMbPSzvDjezm5UnoZf7VtwqyruNYhroom"
+                  href="https://jup.ag/swap/SOL-BK2J3DaVb1Pv6xxTfJjBWyPYAh4i17f1VNp9oWjrpump"
                   ><span class="ui-menu-item-wrapper">Buy now</span></a
                 >
               </li>
